# rhiz-prototype

./: .dockerignore  .env.example  .env.template  .gitignore  .replit  BACKEND_SERVICES_CONSOLIDATION.md  CLEANUP_COMPLETE.md  CODEBASE_AUDIT.md  CODEBASE_AUDIT_REPORT.md  CODEBASE_MODERNIZATION_AUDIT.md  CODEBASE_MODERNIZATION_COMPLETE.md  COMPONENT_ORGANIZATION_REPORT.md  CRITICAL_FIXES_CHECKLIST.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_TO_GITHUB.md  Dockerfile  GITHUB_UPLOAD_INSTRUCTIONS.md  GOOGLE_OAUTH_SETUP.md  HTML_TEMPLATE_INTEGRATION_COMPLETE.md  LAUNCH_READY.md  MIGRATION_GUIDE.md  ONBOARDING_CONSOLIDATION_COMPLETE.md  PRODUCTION_CHECKLIST.md  PROJECT_STATUS_REPORT.md  QUICK_UPLOAD_GUIDE.txt  REACT_FRONTEND_GUIDE.md  REACT_NAVIGATION_AUDIT_REPORT.md  README.md  README.structure.md  RELEASE_NOTES.md  REPLIT_GITHUB_GUIDE.md  STRIPE_WEBHOOK_SETUP.md  TEMPLATE_MIGRATION_COMPLETE.md  TEMPLATE_MIGRATION_PLAN.md  TEMPLATE_ORGANIZATION.md  TESTING_GUIDE.md  UX_ANALYSIS_REPORT.md  ai_contact_matcher.py  analytics.py  analyze_unused_files.py  (+89 more)
attached_assets/: Connections 2_1751086873204.csv  Connections_1751086868128.csv  Pasted--1-Hero-Section-Top-of-Fold-Structure-Full-width-layout-centered-Max-width-container-1200-1750903996166_1750903996167.txt  Pasted--Step-1-Extend-Schema-Add-XP-Titles-sql-Copy-Edit-Add-to-users-table-ALTER-TABLE-users-ADD-1750900321766_1750900321767.txt  Pasted--Title-Implement-Signup-Free-Plan-and-Paid-Tier-in-OuRhizome-Contact-Intelligence-App-Goal--1750908357612_1750908357613.txt  Pasted-Core-Feature-Conference-Mode-How-It-Works-in-Your-App-User-activates-Conference-Mode-Prompt--1750899453347_1750899453348.txt  Pasted-Create-a-new-Replit-Python-project-called-founder-network-ai-Include-Flask-SQLite-and-the-OpenAI--1750887756372_1750887756373.txt  Pasted-Create-a-new-Trust-Insights-section-within-the-Rhiz-app-designed-to-surface-intelligent-real-tim-1751064497331_1751064497332.txt  Pasted-Full-Routing-Navigation-Redundancy-Cleanup-for-Rhiz-App-Refactor-and-audit-the-full-codebase-of-t-1751133851286_1751133851291.txt  Pasted-Grow-with-Purpose-Connect-with-Intelligence-Subheadline-Your-network-is-more-than-names-and-emai-1751007461532_1751007461534.txt  Pasted-Here-s-a-focused-expert-prompt-to-generate-a-complete-Settings-section-for-your-Rhiz-app-wr-1751076447930_1751076447931.txt  Pasted-I-am-working-on-a-full-stack-project-called-Rhiz-originally-built-in-Python-and-recently-upgraded-w-1751069904787_1751069904788.txt  Pasted-I-m-building-the-onboarding-network-page-for-the-Rhiz-app-This-page-transforms-a-user-s-contact-li-1751087946439_1751087946440.txt  Pasted-Magic-Link-Full-App-Flow-1-Verify-Identity-User-clicks-magic-link-from-email-or-text-Backend-ve-1751081866610_1751081866612.txt  Pasted-RHIZOMATIC-INTELLIGENCE-LAYER-CORE-PROMPT-Purpose-Create-a-living-non-linear-AI-layer-that-maps--1750898190185_1750898190186.txt  Pasted-Upgrade-Prompt-Relationship-Intelligence-Layer-Expansion-Objective-Integrate-advanced-relationship-1751035310879_1751035310881.txt  Pasted-Upgrade-the-Contacts-module-of-the-Rhiz-app-to-support-multi-source-intelligent-syncing-and-integra-1751064138400_1751064138401.txt  Pasted-You-are-building-a-background-gamification-engine-for-a-goal-based-contact-intelligence-app-The-eng-1750902144387_1750902144389.txt  Pasted-You-are-building-a-goal-first-AI-powered-contact-intelligence-app-designed-for-early-stage-founders-1750902666896_1750902666897.txt  Pasted-You-are-upgrading-the-Rhiz-app-a-purpose-driven-relationship-intelligence-platform-It-uses-a-React-1751128413056_1751128413057.txt  Pasted-You-are-working-on-Rhiz-a-web-app-originally-built-in-Python-now-running-on-a-React-frontend-desi-1751078027784_1751078027786.txt  Pasted-You-are-working-on-the-Rhiz-intelligent-relationship-manager-built-with-a-React-Vite-TypeScript--1751121322614_1751121322615.txt  Pasted-You-re-upgrading-the-Ourhizome-Flask-app-to-include-deeper-CRM-capabilities-inspired-by-Monica-Add--1750957862859_1750957862861.txt  new_contacts_test.csv  sample_contacts.csv  sample_contacts_upload.csv
backend/: README.md  __init__.py  extensions.py  models.py
deprecated/: api_routes_broken.py
e2e/: auth.spec.ts  dashboard.spec.ts
frontend/: .eslintrc.json  .prettierrc.json  Dockerfile  index.html  minimal.vite.config.js  nginx.conf  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
routes/: __init__.py  auth_routes.py  contact_routes.py  core_routes.py  goal_routes.py  intelligence_routes.py  journal_routes.py  trust_analytics_routes.py
services/: __init__.py  contact_intelligence.py  contact_sync_engine.py  (+10 more)
(+230 files in other folders)
