[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.1",
    "openai>=1.91.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.1",
    "sendgrid>=6.12.4",
    "slack-sdk>=3.35.0",
    "stripe>=12.2.0",
    "telegram>=0.0.1",
    "werkzeug>=3.1.3",
]
