[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.1",
    "openai>=1.91.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.1",
    "resend>=2.10.0",
    "sendgrid>=6.12.4",
    "slack-sdk>=3.35.0",
    "stripe>=12.2.0",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "flask-dance>=7.1.0",
    "selenium>=4.33.0",
    "zulip>=0.9.0",
]
